[package]
name = "sky-orm"
version.workspace = true
edition.workspace = true
repository.workspace = true

[lints]
workspace = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -3 }
nursery = { level = "warn", priority = -2 }
unwrap_used = { level = "warn", priority = -1 }
expect_used = { level = "warn", priority = -1 }
print_stdout = { level = "deny", priority = -1 }

[workspace]
members = [
  ".",
  "sky-orm-cli",
  "sky-orm-macros",
  "sky-orm-sqlparse",
  "sky-orm-tests",
]

[workspace.package]
version = "0.1.0"
repository = "https://github.com/Naxdy/SkyORM"
edition = "2024"

[workspace.dependencies]
sky-orm-macros = { version = "0.1.0", path = "./sky-orm-macros" }
sky-orm-sqlparse = { version = "0.1.0", path = "./sky-orm-sqlparse" }
sky-orm = { version = "0.1.0", path = "." }
sqlx = { version = "0.8.3", features = ["chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
futures = "0.3.31"
itertools = "0.14.0"
sqlparser = { version = "0.56.0", features = ["serde", "serde_json"] }

[dependencies]
itertools.workspace = true
futures.workspace = true
sky-orm-macros.workspace = true
sqlx.workspace = true

[features]
default = []
runtime-async-std = ["sqlx/runtime-async-std"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-tokio = ["sqlx/runtime-tokio"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
tls-native-tls = ["sqlx/tls-native-tls"]
tls-none = ["sqlx/tls-none"]
tls-rustls = ["sqlx/tls-rustls"]
tls-rustls-aws-lc-rs = ["sqlx/tls-rustls-aws-lc-rs"]
tls-rustls-ring = ["sqlx/tls-rustls-ring"]
tls-rustls-ring-native-roots = ["sqlx/tls-rustls-ring-native-roots"]
tls-rustls-ring-webpki = ["sqlx/tls-rustls-ring-webpki"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
regexp = ["sqlx/regexp"]
rust_decimal = ["sqlx/rust_decimal"]
sqlite = ["sqlx/sqlite"]
sqlite-unbundled = ["sqlx/sqlite-unbundled"]
time = ["sqlx/time"]
uuid = ["sqlx/uuid"]
bigdecimal = ["sqlx/bigdecimal"]
bit-vec = ["sqlx/bit-vec"]
chrono = ["sqlx/chrono"]
ipnetwork = ["sqlx/ipnetwork"]
mac_address = ["sqlx/mac_address"]
all-databases = ["sqlx/all-databases"]
