[package]
name = "sky-orm-sqlparse"
description = "Helper crate to assist in parsing SQL syntax, used in SkyORM."
version.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlparser = { version = "0.56.0", features = ["serde", "serde_json"] }

