[package]
name = "sky_orm_sqlparse"
description = "Helper crate to assist in parsing SQL syntax, used in SkyORM."
version.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlparser = { version = "0.56.0", features = ["serde", "serde_json"] }

